src/objects/SDU_Project__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>TEXT (CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateTime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <label>Description Extended</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marktpartij__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marktpartij</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SDU Projects</relationshipLabel>
        <relationshipName>SDU_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDU_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDU Project</label>
        <referenceTo>SDU_Project__c</referenceTo>
        <relationshipLabel>SDU Projects</relationshipLabel>
        <relationshipName>SDU_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SDU Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SDU_Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDU Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>